--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "next-sanity": "^9.8.30",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3",
+    "react-use-cart": "^1.14.0",
     "sanity": "^3.68.3",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
